fix banner bottom responsive on smallest screen sizes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -174,7 +174,7 @@ section {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    padding-bottom: var(--padding-s);
+    padding: var(--padding-s);
     color: var(--color-white);
     position: relative;
     z-index: 2;
@@ -381,5 +381,11 @@ button {
     .newsletter form input,
     .newsletter form button {
         width: 100%;
+    }
+}
+
+@media (max-width: 536px){
+    .banner-pre-footer div{
+        align-items: start;
     }
 }
